<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#00B7EE">

    <TextView
        android:id="@+id/addchallenge"
        android:layout_width="340dp"
        android:layout_height="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/rounded_corner_w"
        android:fontFamily="@font/cantarell"
        android:gravity="center"
        android:text="@string/how_much_should_you_sleep"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#00B7EE"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/challenges_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/challenges_title"
        android:layout_width="324dp"
        android:layout_height="405dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/cantarell"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/articleComplete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addchallenge" />

    <Button
        android:id="@+id/articleComplete_btn"
        android:layout_width="186dp"
        android:layout_height="53dp"
        android:fontFamily="@font/cantarell"
        android:text="@string/complete"
        android:textColor="#00B7EE"
        android:background="@drawable/rounded_corner_w"
        android:textSize="16sp"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/star_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenges_title" />

    <TextView
        android:id="@+id/articlePoints_txt"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="43dp"
        android:text="@string/_2_points"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/star_img"
        app:layout_constraintTop_toBottomOf="@+id/articleComplete_btn" />

    <ImageView
        android:id="@+id/star_img"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/articlePoints_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleComplete_btn"
        app:srcCompat="@drawable/whitestar" />


</androidx.constraintlayout.widget.ConstraintLayout>